// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditTitle displayDefaultValueAsPlaceholder 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-1vmjhy7-empty-text-euiInlineEditReadMode-hasPlaceholder"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle isReadOnly 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    aria-level="1"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-1xkbuye-empty-disabled-euiInlineEditReadMode-isReadOnly"
    data-test-subj="euiInlineReadModeButton"
    disabled=""
    role="heading"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
          role="presentation"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  />
</div>
`;

exports[`EuiInlineEditTitle renders 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size l 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-l-l"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-l"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size m 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size s 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-s-s"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-s"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xs-xs"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xs"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xxs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xxs-xxs"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xxs"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xxxs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xxxs-xxxs"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-1j2im8v-empty-text-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xxxs"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;
